--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 
 body, html {
   height: 103%;
-  color: black;
   line-height: 1.8;
+  background-color: black;
 }
 
 .header-panel {
@@ -30,7 +30,7 @@ body, html {
   background: black;
   color: red;
   min-height:50%;
-  padding-top: 10%;
+  margin-top: 4em;
 }
 
 .bgimg-3 {
@@ -86,7 +86,7 @@ body, html {
 
 <div class="header-panel w3-display-container" id="home">
     <div class="w3-display-middle" style="white-space:nowrap;">
-        <img src="{{ asset('images/cjb-valeting.png') }}">
+        <img src="assets/logo.png">
     </div>
 	<div class="chevron-middle" style="white-space:nowrap;">
 		<i class="fas fa-chevron-down chevron-down text-centre"></i>
@@ -134,11 +134,9 @@ body, html {
 	</div>
 </div>
 
-
-
 <div class="w3-display-container">
     <div class="w3-display-middle">
-        <span class="w3-xxlarge w3-text-red">PORTFOLIO</span>
+        <span class="w3-xxlarge w3-text-red">Reviews</span>
     </div>
 </div>
 
