--- a/index.html
+++ b/index.html
@@ -10,83 +10,30 @@
 	crossorigin="anonymous" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-
-<style>
-
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
-
-body, html {
-  height: 103%;
-  line-height: 1.8;
-  background-color: black;
-}
-
-.header-panel {
-  background: black;
-  min-height: 100%;
-}
-
-.black-background-content {
-  background: black;
-  color: red;
-  min-height:50%;
-  margin-top: 4em;
-}
-
-.bgimg-3 {
-  
-  min-height: 400px;
-}
-
-.w3-wide {letter-spacing: 10px;}
-.w3-hover-opacity {cursor: pointer;}
-.w3-bar-item {color: red; font-size: 1.7em;}
-.w3-white .w3-bar-item {color: black; font-size: 1.7em;}
-
-@media only screen and (max-device-width: 1600px) {
-  .bgimg-1, .bgimg-2, .bgimg-3 {
-    background-attachment: scroll;
-    min-height: 400px;
-  }
-}
-
-.chevron-middle {
-	position: absolute;
-  top: 90%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-	color: red;
-	font-size: 50px;
-}
-
-.social-button {
-  color: red;
-}
-
-</style>
+<script src="assets/js/main.js"></script>
+<link rel="stylesheet" href="assets/css/main.css">
 <body>
+	<div class="w3-top">
+    	<div class="w3-bar" id="myNavbar">
+            <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+              <i class="fa fa-bars"></i>
+    		</a>
+          <a href="#home" class="w3-bar-item w3-button"><i class="fas fa-home"></i> Home</a>
+          <a href="#pricing" class="w3-bar-item w3-button w3-hide-small"><i class="fas fa-tags"></i> Pricing</a>
+          <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> Portfolio</a>
+          <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> Contact</a>
+      </div>
 
-<div class="w3-top">
-    <div class="w3-bar" id="myNavbar">
-        <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-            <i class="fa fa-bars"></i>
-        </a>
-        <a href="#home" class="w3-bar-item w3-button"><i class="fas fa-home"></i> Home</a>
-        <a href="#pricing" class="w3-bar-item w3-button w3-hide-small"><i class="fas fa-tags"></i> Pricing</a>
-        <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> Portfolio</a>
-        <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> Contact</a>
-    </div>
-
-    <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium">
-        <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">Pricing</a>
-        <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">Portfolio</a>
-        <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">Contact</a>
-    </div>
-</div>
+      <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium">
+          <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">Pricing</a>
+          <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">Portfolio</a>
+          <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">Contact</a>
+      </div>
+  </div>
 
 <div class="header-panel w3-display-container" id="home">
     <div class="w3-display-middle" style="white-space:nowrap;">
-        <img src="assets/logo.png">
+        <img src="assets/images/logo.png">
     </div>
 	<div class="chevron-middle" style="white-space:nowrap;">
 		<i class="fas fa-chevron-down chevron-down text-centre"></i>
@@ -233,43 +180,5 @@ body, html {
     <i class="fa fa-instagram w3-hover-opacity social-button"></i>
   </div>
 </footer>
- 
-<script>
-
-$(function() {
-	$('.chevron-down').click(function () {
-		$('html, body').animate({
-            scrollTop: $("#pricing").offset().top - 100
-        }, 2000);
-	});
-});
-
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
-
-window.onscroll = function() {myFunction()};
-function myFunction() {
-    var navbar = document.getElementById("myNavbar");
-    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-white";
-    } else {
-        navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
-    }
-}
-
-function toggleFunction() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
-</script>
-
 </body>
 </html>
