--- a/index.html
+++ b/index.html
@@ -1,189 +1,178 @@
 <!DOCTYPE html>
-<html>
-<title>CJB Valeting</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="  crossorigin="anonymous" />
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-<link rel="stylesheet" href="assets/css/main.css">
-
-<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<script src="assets/js/main.js"></script>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-        <a class="navbar-brand" href="#">CJB Valeting</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Reviews</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-<div class="container">
-    <div class="row">
-        <div class="col d-flex align-items-center justify-content-center h-100 d-inline-block container" id="home">
-            <div class="w3-display-middle" style="white-space:nowrap;">
-            <img src="assets/images/logo.png">
-        </div>
-	    <div class="chevron-middle" style="white-space:nowrap;">
-    		<i class="fas fa-chevron-down chevron-down text-centre"></i>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div id="pricing">
-            <div class="text-center">
-                <h1>Pricing</h1>
-                <h3>Services Provided</h3>
-                <p>- Standard Interior Clean *</p>
-                <p>- Deep Interior Clean *</p>
-
-                <table class="table table-dark">
-                    <thead>
-                        <tr>
-                            <th>Service</th>
-                            <th>Standard*</th>
-                            <th>Deep*</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Smaller Cars</td>
-                            <td>&pound;30.00</td>
-                            <td>&pound;45.00</td>
-                        </tr>
-                        <tr>
-                            <td>Larger Cars</td>
-                            <td>&pound;40.00</td>
-                            <td>&pound;55.00</td>
-                        </tr>
-                        <tr>
-                            <td>Vans</td>
-                            <td>&pound;50.00</td>
-                            <td>&pound;60.00</td>
-                        </tr>
-                    </tbody>
-                </table>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>CJB Valeting</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+        <script src="assets/js/main.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <link href="assets/css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">CJB Valeting</a>
+                <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#pricing">Pricing</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#reviews">Reviews</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a></li>
+                    </ul>
+                </div>
             </div>
+        </nav>
+        <header class="masthead bg-primary text-white text-center">
+            <div class="container d-flex align-items-center flex-column">
+                <img class="masthead-avatar mb-5" src="assets/images/logo.png" alt="" />
+                <h1><i class="fas fa-chevron-down chevron-down"></i></h1>
+            </div>
+        </header>
+        <section class="page-section portfolio" id="pricing">
+            <div class="container">
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Pricing</h2>
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-pound-sign red"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <table class="table table-striped">
+                  <thead>
+                      <tr>
+                          <th>Service</th>
+                          <th>Standard*</th>
+                          <th>Deep*</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr>
+                          <td>Smaller Cars</td>
+                          <td>&pound;30.00</td>
+                          <td>&pound;45.00</td>
+                      </tr>
+                      <tr>
+                          <td>Larger Cars</td>
+                          <td>&pound;40.00</td>
+                          <td>&pound;55.00</td>
+                      </tr>
+                      <tr>
+                          <td>Vans</td>
+                          <td>&pound;50.00</td>
+                          <td>&pound;60.00</td>
+                      </tr>
+                  </tbody>
+              </table>
+            </div>
+        </section>
+        <section class="page-section bg-primary text-white mb-0" id="reviews">
+            <div class="container">
+                <h2 class="page-section-heading text-center text-uppercase text-white">Reviews</h2>
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <h4>What do previous customers say?</h4>
+                <div class="row">
+                    <div class="col-lg-4 ml-auto review">
+                      <p class="lead"><i class="fas fa-quote-left"></i> Callum did a great job on my car it’s like brand new. Great affordable prices and came at a time to suit me very happy with the results. Will be using CJB Valeting again.</p>
+                      <small>- Jack Mellor</small> 
+                    </div>
+                    <div class="col-lg-4 ml-auto review">
+                      <p class="lead"><i class="fas fa-quote-left"></i> Callum has done an amazing job on our car, was in a very bad way but looks as good as new now, takes his time on the car and is very professional. cleans to a very high standard will definitely use his service again.</p>
+                      <small>- Lizzie Barker</small>
+                    </div>
+                    <div class="col-lg-4 ml-auto review">
+                      <p class="lead"><i class="fas fa-quote-left"></i> Really pleased with my valet that cjb have done today. Highly recommend them and will definitely be using them again.</p>
+                      <small>- Jayne Burdon</small>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Contact Section-->
+        <section class="page-section" id="contact">
+            <div class="container">
+                <!-- Contact Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Contact Section Form-->
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
+                        <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>Name</label>
+                                    <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>Email Address</label>
+                                    <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>Phone Number</label>
+                                    <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number." />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                    <label>Message</label>
+                                    <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <br />
+                            <div id="success"></div>
+                            <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Send</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Footer-->
+        <footer class="footer text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="text-uppercase mb-4">Social</h4>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/cjb_valeting-113999997039929/reviews/?ref=page_internal"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Copyright Section-->
+        <div class="copyright py-4 text-center text-white">
+            <div class="container"><small>Copyright © CJB Valeting 2021</small></div>
         </div>
-    </div>
-</div>
-
-<div class="w3-display-container">
-    <div class="w3-display-middle">
-        <span class="w3-xxlarge w3-text-red">Reviews</span>
-    </div>
-</div>
-
-<div class="black-background-content" id="pricing">
-  <div class="w3-row-padding w3-center">
-    <div class="w3-col m3">
-      <img src="{{ asset('images/demo-img-1.png') }}" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pic 1">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="{{ asset('images/demo-img-2.png') }}" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pic 2">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="{{ asset('images/demo-img-3.png') }}" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pic 3">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="{{ asset('images/demo-img-4.png') }}" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pic 4">
-    </div>
-  </div>
-
-  <div class="w3-row-padding w3-center w3-section">
-    <div class="w3-col m3">
-      <img src="{{ asset('images/demo-img-5.png') }}" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pic 5">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="{{ asset('images/demo-img-6.png') }}" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pic 6">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="{{ asset('images/demo-img-7.png') }}" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pic 7">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="{{ asset('images/demo-img-8.png') }}" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pic 8">
-    </div>
-    <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
-  </div>
-</div>
-
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
-</div>
-
-<!-- <div class="bgimg-3 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
-  </div>
-</div> -->
-
-<!-- <div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">Get in touch</h3>
-  <p class="w3-center"><em>Drop me a message and I'll get back to you shortly</em></p>
-
-  <div class="w3-row w3-padding-32 w3-section">
-    <div class="w3-col m4 w3-container">
-      <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
-    </div>
-    <div class="w3-col m8 w3-panel">
-      <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> South / West Yorkshire<br>
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: 012345678<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: cjb-valeting@gmail.com<br>
-      </div>
-      <p>Or leave me a note:</p>
-      <form action="/action_page.php" target="_blank">
-        <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-          </div>
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-          </div>
+        <div class="scroll-to-top d-lg-none position-fixed">
+            <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
         </div>
-        <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-        <button class="w3-button w3-black w3-right w3-section" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </form>
-    </div>
-  </div>
-</div> -->
-
-<footer class="w3-center w3-padding-64 black-background-content">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity social-button"></i>
-    <i class="fa fa-instagram w3-hover-opacity social-button"></i>
-  </div>
-</footer>
-</body>
+        </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <script src="assets/js/main.js"></script>
+    </body>
 </html>
