--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Social</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/cjb_valeting-113999997039929/reviews/?ref=page_internal"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/cjb_valeting/?hl=en-gb"><i class="fab fa-fw fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
