--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#services">Services</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#pricing">Pricing</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#reviews">Reviews</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a></li>
@@ -36,15 +37,40 @@
                 <h1><i class="fas fa-chevron-down chevron-down"></i></h1>
             </div>
         </header>
-        <section class="page-section portfolio" id="pricing">
+        <section class="page-section" id="services">
             <div class="container">
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Pricing</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Services</h2>
                 <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-car red"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <div class="text-center services">
+                    <h6>Standard Interior Cleans Include</h6>
+                    Dry Vac of Seats/Carpets<br />
+                    Plastics and Vinyls Cleaned<br />
+                    All litter removed<br />
+                    Door Shuts Wiped down<br />
+                    <h6 style='margin-top: 2em;'>Deep Interior Cleans Include</h6>
+                    Full Shampoo of Seats/Carpets (Wet + Dry Vac)<br />
+                    Plastics and Vinyls Cleaned<br />
+                    All litter removed<br />
+                    Door Shuts Wiped down<br />
+                    Glass Protection Interior/Exterior<br />
+                    <br><br>
+                    <strong>Please note seats may take upto two days to fully dry from this service</strong>
+                </div>
+            </div>
+        </section>
+        <section class="page-section bg-primary text-white mb-0" id="pricing">
+            <div class="container">
+                <h2 class="page-section-heading text-center text-uppercase text-white mb-0">Pricing</h2>
+                <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-pound-sign red"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <table class="table table-striped">
+                <table class="table table-striped table-dark">
                   <thead>
                       <tr>
                           <th>Service</th>
@@ -72,10 +98,10 @@
               </table>
             </div>
         </section>
-        <section class="page-section bg-primary text-white mb-0" id="reviews">
+        <section class="page-section" id="reviews">
             <div class="container">
-                <h2 class="page-section-heading text-center text-uppercase text-white">Reviews</h2>
-                <div class="divider-custom divider-light">
+                <h2 class="page-section-heading text-center text-uppercase">Reviews</h2>
+                <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star red"></i></div>
                     <div class="divider-custom-line"></div>
@@ -97,10 +123,10 @@
                 </div>
             </div>
         </section>
-        <section class="page-section" id="contact">
+        <section class="page-section bg-primary text-white mb-0" id="contact">
             <div class="container">
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-                <div class="divider-custom">
+                <h2 class="page-section-heading text-center text-uppercase text-white mb-0">Contact Me</h2>
+                <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-phone-volume red"></i></div>
                     <div class="divider-custom-line"></div>
